examples/test/testpolicy17043.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17043
  namespace: namespace398
spec:
  podSelector:
    matchLabels:
      key42: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value11
      podSelector:
        matchLabels:
          key41: value14
          key30: value40
          key38: value48
